make sure home contact phone number font color is white on safari

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -191,6 +191,7 @@
 
 		.phone_number {
 			font-size: 30px;
+			color: #fff;
 		}
 	}
 }
